fixed-hidden-overflow

--- a/src/pretix/static/pretixcontrol/scss/auth.scss
+++ b/src/pretix/static/pretixcontrol/scss/auth.scss
@@ -5,7 +5,7 @@
 
 body {
     background: #fbf7fc;
-    overflow-x: hidden;
+    overflow-x: hidden;  
 }
 
 footer {
@@ -72,6 +72,25 @@ footer {
     box-shadow: 0 7px 14px 0 rgba(78, 50, 92, 0.1), 0 3px 6px 0 rgba(0, 0, 0, .07);
     margin: 15px auto;
     border-radius: $border-radius-base;
+}
+
+@media (max-width: 768px) {
+    .form-signin, .impersonate-warning, .container > .alert {
+        max-width: 90%;  
+        padding: 10px;  
+    }
+
+    .logo {
+        width: 150px; 
+    }
+
+    footer {
+        font-size: 9px;  
+    }
+    body {
+        overflow-x: hidden;  
+        padding-right: 10px;  
+    }
 }
 
 @import "../../pretixbase/scss/_rtl.scss";
